Set rubocop target Ruby to 2.3 and auto gen config.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,9 @@
 #
 # https://github.com/bbatsov/rubocop#configuration
 
+AllCops:
+  TargetRubyVersion: 2.3
+
 inherit_from: .rubocop_todo.yml
 
 # Disable Metrics/ClassLength
